test/compile_errors/err_derive_component_id_generic.w
//! expect-error: derive ComponentId requires a concrete struct

use std.component

@[derive(ComponentId)]
type ComponentBox[T] {
    value: T,
}

fn main:
    let _id = ComponentBox[i32].component_id()
